echo/echo_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.getmrmarket.com
        - echo1.getmrmarket.com
        - echo2.getmrmarket.com
      secretName: echo-tls
  rules:
    - host: echo1.getmrmarket.com
      http:
        paths:
          - backend:
              serviceName: echo1
              servicePort: 80
    - host: api.getmrmarket.com
      http:
        paths:
          - backend:
              serviceName: hasura
              servicePort: 80
    - host: echo2.getmrmarket.com
      http:
        paths:
          - backend:
              serviceName: echo2
              servicePort: 80
